maze.lessons.maze.island.IslandMaze.scala.error
Escaper:18: error: not found: value North
			case 99 => North=true
                                   ^Escaper:19: error: not found: value North
			case 98 => North=true
                                   ^Escaper:20: error: not found: value North
			case 96 => North=true
                                   ^Escaper:22: error: not found: value North
		if (North) {
                    ^Escaper:47: error: not found: value north
	if (getDirection==north) {
                          ^